issue: on mobile everything is shifted right for some reason

--- a/src/components/AudioPlayer/AudioPlayer.css
+++ b/src/components/AudioPlayer/AudioPlayer.css
@@ -66,5 +66,6 @@
         margin-top:2%;
         margin-left: 0%;
         margin-right: 0%;
+        border-radius: 0px;
     }
 }
