--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -1,5 +1,4 @@
 .header-container {
-  position: relative; 
   z-index: 1000;
   overflow: hidden;
   top: 0;
